// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`list-item.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
- 1
        foo
- 2\\
        bar

=====================================output=====================================
- 1 foo
- 2\\
  bar

================================================================================
`;

exports[`list-item.md format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- 1
        foo
- 2\\
        bar

=====================================output=====================================
- 1
  foo
- 2\\
  bar

================================================================================
`;
